// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with logout button 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="general-authenticationSection"
>
  <section
    aria-label="Authentication"
    className="coral coral-viewerBox"
  >
    <Localized
      id="general-userBoxAuthenticated-signedIn"
    >
      <div
        className="UserBoxAuthenticated-text coral coral-viewerBox-usernameLabel"
      >
        Signed in as
      </div>
    </Localized>
    <ForwardRef(forwardRef)
      alignItems="flex-end"
      className="coral coral-viewerBox-usernameContainer"
      wrap={true}
    >
      <Username />
      <Localized
        elems={
          Object {
            "button": <ForwardRef(forwardRef)
              className="UserBoxAuthenticated-userBoxButton coral coral-viewerBox-logoutButton"
              color="primary"
              fontSize="small"
              fontWeight="semiBold"
              onClick={[Function]}
              paddingSize="none"
              underline={true}
              variant="flat"
            />,
          }
        }
        id="general-userBoxAuthenticated-notYou"
      >
        <span
          className="UserBoxAuthenticated-text UserBoxAuthenticated-signOut"
        >
          Not you? &lt;button&gt;Sign Out&lt;/button&gt;
        </span>
      </Localized>
    </ForwardRef(forwardRef)>
  </section>
</Localized>
`;

exports[`renders correctly without logout button 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="general-authenticationSection"
>
  <section
    aria-label="Authentication"
    className="coral coral-viewerBox"
  >
    <Localized
      id="general-userBoxAuthenticated-signedIn"
    >
      <div
        className="UserBoxAuthenticated-text coral coral-viewerBox-usernameLabel"
      >
        Signed in as
      </div>
    </Localized>
    <ForwardRef(forwardRef)
      alignItems="flex-end"
      className="coral coral-viewerBox-usernameContainer"
      wrap={true}
    >
      <Username />
    </ForwardRef(forwardRef)>
  </section>
</Localized>
`;
